# IPP

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/IPPTest/: CMakeLists.txt  ipptest.cpp  totalbudgettest.cpp  totalbudgettest.h
lib/chemistry/: CMakeLists.txt
lib/chemistry/include/: anyelementunbuffered.h  cellid_dissolveonly_func.h  cellid_si_func.h  cellidconvertfuncwrapper.h  cellidconverttosifunc.h  cellidpassingdissolveonlyfunc.h  cellindexcorrection.h  configurephreeqccellsactivity.h  initporosity.h  isinsidevolume.h  phaseidperelement.h  phreeqccalcporosity.h  phreeqcconstants.h  phreeqcfeatures.h  phreeqcgeometrysync.h  phreeqcinputfilegenerator.h  phreeqcprerunhandler.h  phreeqcreactionmoduledata.h  phreeqcreactionmodulefactory.h  porositycalcutils.h  printphaseinfos.h  reactionmodule.h  reactionmoduleconfig.h  reactionmoduleoptimization.h  significantchangeprediction.h
lib/chemistry/src/: anyelementunbuffered.cpp  calcporositychangefactor.h  cellid_dissolveonly_func.cpp  cellid_neverdissolveonly_func.cpp  cellid_neverdissolveonly_func.h  cellid_porositsdepedenddissolveonly_func.cpp  cellid_porositsdepedenddissolveonly_func.h  cellidconverttosifunc.cpp  cellidpassingdissolveonlyfunc.cpp  cellidpassingfuncwrapper.h  cellindexcorrection.cpp  configurephreeqccellsactivity.cpp  disablephreeqccells.cpp  disablephreeqccells.h  dummyreactionmodule.cpp  dummyreactionmodule.h  enablephreeqccells.cpp  enablephreeqccells.h  findzeroporosityroot.cpp  findzeroporosityroot.h  fixcellsidsfornewfielddecomposition.cpp  fixcellsidsfornewfielddecomposition.h  handledisabledreactioncells.h  handleinterfaceswitch.cpp  handleinterfaceswitch.h  initporosity.cpp  isinsidevolume.cpp  localaccessphreeqcrm.cpp  localaccessphreeqcrm.h  phaseidperelement.cpp  phreeqccalcdiffcoefs.cpp  phreeqccalcdiffcoefs.h  phreeqccalcporosity.cpp  phreeqcdefaultconvergencevalues.h  phreeqcdump.cpp  phreeqcdump.h  phreeqcgeometrysync.cpp  phreeqcglobalinitdata.h  phreeqcinitialdata.h  phreeqcinitrun.cpp  (+33 more)
lib/common/: CMakeLists.txt
lib/common/include/: abstractboundaryconditions.h  abstractboundaryconditionsfwd.h  abstractcalcinterfaceproperties.h  abstractdissolveonlycalc.h  abstractdissolveonlycalcfwd.h  abstractdisspreciponlyinfo.h  abstractdistributeexcesstotals.h  abstractflowfunctor.h  abstractgeometricsicalc.h  abstractgeometricsicalcfwd.h  abstractgeometrysync.h  abstractmultiscalediffusioncalc.h  abstractmultiscalediffusioncalcfwd.h  abstractporositycalc.h  abstractporositycalcfwd.h  abstractsicalc.h  abstractsicalcfwd.h  auxdata.h  auxresultprocessing.h  boundaryconditiondata.h  boundaryconditiondomain.h  boundaryconditions.h  boundaryconditiontype.h  cellneighborinfo.h  celltotalsdiff.h  configboundaryconditions.h  configboundaryconditionsfwd.h  debugdata.h  dissolveonlyinfos.h  dissprecipbehaviour.h  fielddecomposition.h  indexhelper.h  ippconfig.h  ippconstants.h  ipprenderer.h  ipprendererfwd.h  latticeboltzmanncollisiontype.h  multitoserialdatasync.h  nonlocaloperations.h  phasenametodissprecipbehaviour.h  (+7 more)
lib/common/src/: abstractmultiscalediffusioncalc.cpp  boundaryconditions.cpp  fielddecomposition.cpp  ippconfig.cpp  nonlocaloperations.cpp  phasenametodissprecipbehaviour.cpp  simpleporositycalc.cpp  simulationexchangedata.cpp  thresholdmultiscalediffusioncalc.cpp  thresholdmultiscalediffusioncalc.h
lib/core/: CMakeLists.txt
lib/core/include/: ipp.h
lib/core/src/: arrayserialmultiscalarfieldt.h  calceffectivediffcoef.cpp  calceffectivediffcoef.h  filternan.h  interfacetransferinfo.h  ipp.cpp  ippcoupling.cpp  ippcoupling.h  ippimpl.cpp  ippimpl.h  palabosphreeqcstate.cpp  palabosphreeqcstate.h  serialmultiscalar.h  transreacfactory.cpp  transreacfactory.h  transreacstate.cpp  transreacstate.h
lib/io/: CMakeLists.txt
lib/io/include/: bcgenerator.h  cemhyd3dimagereader.h  configdatawrapper.h  configfactorybase.h  configreader.h  initfunctors.h  jsonboundaryconditiongen.h  jsonmultiscalediffusionfactory.h  jsonporositymodelfactory.h  jsonsaturationindexcalcfactory.h  multiscalediffusionfactory.h  porositymodelfactory.h  saturationindexcalcfactory.h  vtkimagereader.h
lib/io/src/: cemhyd3dimagereader.cpp  configfactorybase.cpp  configreader.cpp  distancesicalc.cpp  distancesicalc.h  inputgeometryscale.cpp  inputgeometryscale.h  jsonboundaryconditiongen.cpp  jsonmultiscalediffusionfactory.cpp  jsonporositymodelfactory.cpp  jsonsaturationindexcalcfactory.cpp  multiscalediffusionfactory.cpp  nonreturningbcgen.cpp  nonreturningbcgen.h  nonreturningmultiscalediffusionfactory.cpp  nonreturningmultiscalediffusionfactory.h  nonreturningporositymodelfactory.cpp  nonreturningporositymodelfactory.h  nonreturningsicalcfactory.cpp  nonreturningsicalcfactory.h  vtkimagereader.cpp
lib/models/: CMakeLists.txt
lib/models/include/: abstractweightingfunc.h  archieslawdiffusioncalc.h  cshgeldiffusioncoefcalc.h  degradedcshdiffusioncalc.h  dissolveonlybase.h  dissolveonlyonbelowthreshold.h  effectivemediadiffusioncalc.h  lowporosdegradedcshdiffusioncalc.h  lowporosthreshdegradedcshdiffusioncalc.hpp  moritanakadiffusioncalc.h  nucleationdissolveonly.h  pcs_si_func.h  porositycontrolledsolubility.h  porositythresholds.h  tennisjenningscshporositycalc.h  weightedaveragediffusioncalc.h
lib/models/src/: archieslawdiffusioncalc.cpp  cshgeldiffusioncoefcalc.cpp  cshporosityinfos.h  degradedcshdiffusioncalc.cpp  dissolveonlybase.cpp  dissolveonlyonbelowthreshold.cpp  dissolveonlyutils.h  lowporosdegradedcshdiffusioncalc.cpp  lowporosthreshdegradedcshdiffusioncalc.cpp  moritanakadiffusioncalc.cpp  nucleationdissolveonly.cpp  nucleationpropcalc.cpp  nucleationpropcalc.h  pcs_si_func.cpp  porositycontrolledsolubility.cpp  tennisjenningscshporositycalc.cpp  weightedaveragediffusioncalc.cpp
lib/models/tests/: CMakeLists.txt
lib/tools/: CMakeLists.txt
lib/tools/include/: abstractscalarfield.h  abstractscalarfieldfwd.h  arraydimensionconvert.h  bench_tools.h  createfilename.h  distancefieldcalc.h  (+26 more)
lib/transport/: CMakeLists.txt
lib/utils/: CMakeLists.txt
lib/visualization/: CMakeLists.txt
(+266 files in other folders)
